--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ AllCops:
     - 'node_modules/**/*'
     - 'vendor/bundle/**/*'
     - 'bin/**/*'
+    - 'config/**/*'
+    # - 'Gemfile'
 
 Layout/LineLength:
   Max: 120
@@ -23,7 +25,7 @@ Metrics/MethodLength:
 
 Metrics/BlockLength:
   Exclude:
-    - config/**/*
+    # - config/**/*
     - spec/**/*
 
 Lint/AmbiguousBlockAssociation:
