Session Cart Improved
* Updated schema added carts table
* Added controller for managing session cart
* Added views for both user and session cart
* Added helpers for all cart related links
* ApplicationController updated
* Added seeding data

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,7 +6,7 @@ require:
 
 AllCops:
   # Exclude auto-generated files by Rails
-  NewCops: enable
+  NewCops: disable
   TargetRubyVersion: 2.7
   TargetRailsVersion: 5.2
   Exclude:
