--- a/config/storage.yml
+++ b/config/storage.yml
@@ -21,6 +21,10 @@ google:
   credentials: <%= Rails.root.join("crafty-isotope-361520-170664b93983.json") %>
   bucket: test-project-images
 
+# Cloudinary
+cloudinary:
+  service: Cloudinary
+
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
 #   service: AzureStorage
