--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,6 +1,6 @@
 production:
-  cloud_name: dbethgbn2
-  api_key: '329977623828294'
-  api_secret: "y4_mm27TWUpfP8Q_zohfTtXBZ0o"
+  cloud_name: <%= Rails.application.credentials.dig(:cloudinary, :cloud_name) %>
+  api_key: <%= Rails.application.credentials.dig(:cloudinary, :api_key) %>
+  api_secret: <%= Rails.application.credentials.dig(:cloudinary, :api_secret) %>
   enhance_image_tag: true
-  static_file_support: true
+  static_file_support: false
